# aitool

./: pyproject.toml
aitool/: metrics.py  segment.py  util.py
